// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 1`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        />
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      />
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        Loading
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 2`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        />
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      />
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-1"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-1 model-1
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-1 engine, ran for 62606 Km since firstRegistration-1, with a combined consumption of 4.5 (consumptionUnit-1) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-2"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-2 model-2
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-2 engine, ran for 62606 Km since firstRegistration-2, with a combined consumption of 4.5 (consumptionUnit-2) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-3"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-3 model-3
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-3 engine, ran for 62606 Km since firstRegistration-3, with a combined consumption of 4.5 (consumptionUnit-3) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-4"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-4 model-4
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-4 engine, ran for 62606 Km since firstRegistration-4, with a combined consumption of 4.5 (consumptionUnit-4) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-5"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-5 model-5
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-5 engine, ran for 62606 Km since firstRegistration-5, with a combined consumption of 4.5 (consumptionUnit-5) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-6"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-6 model-6
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-6 engine, ran for 62606 Km since firstRegistration-6, with a combined consumption of 4.5 (consumptionUnit-6) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-7"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-7 model-7
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-7 engine, ran for 62606 Km since firstRegistration-7, with a combined consumption of 4.5 (consumptionUnit-7) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-8"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-8 model-8
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-8 engine, ran for 62606 Km since firstRegistration-8, with a combined consumption of 4.5 (consumptionUnit-8) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-9"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-9 model-9
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-9 engine, ran for 62606 Km since firstRegistration-9, with a combined consumption of 4.5 (consumptionUnit-9) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-10"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-10 model-10
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-10 engine, ran for 62606 Km since firstRegistration-10, with a combined consumption of 4.5 (consumptionUnit-10) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-11"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-11 model-11
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-11 engine, ran for 62606 Km since firstRegistration-11, with a combined consumption of 4.5 (consumptionUnit-11) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-12"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-12 model-12
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-12 engine, ran for 62606 Km since firstRegistration-12, with a combined consumption of 4.5 (consumptionUnit-12) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 3`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        >
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Make
              </span>
            </div>
            <div>
              <div>
                <input
                  checked=""
                  id="BMW"
                  name="BMW"
                  type="checkbox"
                />
                <label
                  for="BMW"
                >
                  BMW
                </label>
              </div>
              <div>
                <input
                  id="Skoda"
                  name="Skoda"
                  type="checkbox"
                />
                <label
                  for="Skoda"
                >
                  Skoda
                </label>
              </div>
              <div>
                <input
                  id="Volkswagen"
                  name="Volkswagen"
                  type="checkbox"
                />
                <label
                  for="Volkswagen"
                >
                  Volkswagen
                </label>
              </div>
            </div>
          </div>
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Power
              </span>
            </div>
            <div>
              <div>
                <input
                  id="Min"
                  name="Min"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Min"
                  style="margin: 0.3rem;"
                >
                  Min
                </label>
              </div>
              <div>
                <input
                  id="Max"
                  name="Max"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Max"
                  style="margin: 0.3rem;"
                >
                  Max
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      >
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Make
            </span>
          </div>
          <div>
            <div>
              <input
                checked=""
                id="BMW"
                name="BMW"
                type="checkbox"
              />
              <label
                for="BMW"
              >
                BMW
              </label>
            </div>
            <div>
              <input
                id="Skoda"
                name="Skoda"
                type="checkbox"
              />
              <label
                for="Skoda"
              >
                Skoda
              </label>
            </div>
            <div>
              <input
                id="Volkswagen"
                name="Volkswagen"
                type="checkbox"
              />
              <label
                for="Volkswagen"
              >
                Volkswagen
              </label>
            </div>
          </div>
        </div>
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Power
            </span>
          </div>
          <div>
            <div>
              <input
                id="Min"
                name="Min"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Min"
                style="margin: 0.3rem;"
              >
                Min
              </label>
            </div>
            <div>
              <input
                id="Max"
                name="Max"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Max"
                style="margin: 0.3rem;"
              >
                Max
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        Loading
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 4`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        >
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Make
              </span>
            </div>
            <div>
              <div>
                <input
                  checked=""
                  id="BMW"
                  name="BMW"
                  type="checkbox"
                />
                <label
                  for="BMW"
                >
                  BMW
                </label>
              </div>
              <div>
                <input
                  id="Skoda"
                  name="Skoda"
                  type="checkbox"
                />
                <label
                  for="Skoda"
                >
                  Skoda
                </label>
              </div>
              <div>
                <input
                  id="Volkswagen"
                  name="Volkswagen"
                  type="checkbox"
                />
                <label
                  for="Volkswagen"
                >
                  Volkswagen
                </label>
              </div>
            </div>
          </div>
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Power
              </span>
            </div>
            <div>
              <div>
                <input
                  id="Min"
                  name="Min"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Min"
                  style="margin: 0.3rem;"
                >
                  Min
                </label>
              </div>
              <div>
                <input
                  id="Max"
                  name="Max"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Max"
                  style="margin: 0.3rem;"
                >
                  Max
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      >
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Make
            </span>
          </div>
          <div>
            <div>
              <input
                checked=""
                id="BMW"
                name="BMW"
                type="checkbox"
              />
              <label
                for="BMW"
              >
                BMW
              </label>
            </div>
            <div>
              <input
                id="Skoda"
                name="Skoda"
                type="checkbox"
              />
              <label
                for="Skoda"
              >
                Skoda
              </label>
            </div>
            <div>
              <input
                id="Volkswagen"
                name="Volkswagen"
                type="checkbox"
              />
              <label
                for="Volkswagen"
              >
                Volkswagen
              </label>
            </div>
          </div>
        </div>
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Power
            </span>
          </div>
          <div>
            <div>
              <input
                id="Min"
                name="Min"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Min"
                style="margin: 0.3rem;"
              >
                Min
              </label>
            </div>
            <div>
              <input
                id="Max"
                name="Max"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Max"
                style="margin: 0.3rem;"
              >
                Max
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-1"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-1 model-1
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-1 engine, ran for 62606 Km since firstRegistration-1, with a combined consumption of 4.5 (consumptionUnit-1) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-2"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-2 model-2
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-2 engine, ran for 62606 Km since firstRegistration-2, with a combined consumption of 4.5 (consumptionUnit-2) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-3"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-3 model-3
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-3 engine, ran for 62606 Km since firstRegistration-3, with a combined consumption of 4.5 (consumptionUnit-3) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 5`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        >
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Make
              </span>
            </div>
            <div>
              <div>
                <input
                  checked=""
                  id="BMW"
                  name="BMW"
                  type="checkbox"
                />
                <label
                  for="BMW"
                >
                  BMW
                </label>
              </div>
              <div>
                <input
                  id="Skoda"
                  name="Skoda"
                  type="checkbox"
                />
                <label
                  for="Skoda"
                >
                  Skoda
                </label>
              </div>
              <div>
                <input
                  id="Volkswagen"
                  name="Volkswagen"
                  type="checkbox"
                />
                <label
                  for="Volkswagen"
                >
                  Volkswagen
                </label>
              </div>
            </div>
          </div>
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Power
              </span>
            </div>
            <div>
              <div>
                <input
                  id="Min"
                  name="Min"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Min"
                  style="margin: 0.3rem;"
                >
                  Min
                </label>
              </div>
              <div>
                <input
                  id="Max"
                  name="Max"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Max"
                  style="margin: 0.3rem;"
                >
                  Max
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      >
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Make
            </span>
          </div>
          <div>
            <div>
              <input
                checked=""
                id="BMW"
                name="BMW"
                type="checkbox"
              />
              <label
                for="BMW"
              >
                BMW
              </label>
            </div>
            <div>
              <input
                id="Skoda"
                name="Skoda"
                type="checkbox"
              />
              <label
                for="Skoda"
              >
                Skoda
              </label>
            </div>
            <div>
              <input
                id="Volkswagen"
                name="Volkswagen"
                type="checkbox"
              />
              <label
                for="Volkswagen"
              >
                Volkswagen
              </label>
            </div>
          </div>
        </div>
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Power
            </span>
          </div>
          <div>
            <div>
              <input
                id="Min"
                name="Min"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Min"
                style="margin: 0.3rem;"
              >
                Min
              </label>
            </div>
            <div>
              <input
                id="Max"
                name="Max"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Max"
                style="margin: 0.3rem;"
              >
                Max
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-1"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-1 model-1
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-1 engine, ran for 62606 Km since firstRegistration-1, with a combined consumption of 4.5 (consumptionUnit-1) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-2"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-2 model-2
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-2 engine, ran for 62606 Km since firstRegistration-2, with a combined consumption of 4.5 (consumptionUnit-2) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-3"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-3 model-3
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-3 engine, ran for 62606 Km since firstRegistration-3, with a combined consumption of 4.5 (consumptionUnit-3) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 6`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        >
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Make
              </span>
            </div>
            <div>
              <div>
                <input
                  checked=""
                  id="BMW"
                  name="BMW"
                  type="checkbox"
                />
                <label
                  for="BMW"
                >
                  BMW
                </label>
              </div>
              <div>
                <input
                  id="Skoda"
                  name="Skoda"
                  type="checkbox"
                />
                <label
                  for="Skoda"
                >
                  Skoda
                </label>
              </div>
              <div>
                <input
                  id="Volkswagen"
                  name="Volkswagen"
                  type="checkbox"
                />
                <label
                  for="Volkswagen"
                >
                  Volkswagen
                </label>
              </div>
            </div>
          </div>
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Power
              </span>
            </div>
            <div>
              <div>
                <input
                  id="Min"
                  name="Min"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Min"
                  style="margin: 0.3rem;"
                >
                  Min
                </label>
              </div>
              <div>
                <input
                  id="Max"
                  name="Max"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Max"
                  style="margin: 0.3rem;"
                >
                  Max
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      >
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Make
            </span>
          </div>
          <div>
            <div>
              <input
                checked=""
                id="BMW"
                name="BMW"
                type="checkbox"
              />
              <label
                for="BMW"
              >
                BMW
              </label>
            </div>
            <div>
              <input
                id="Skoda"
                name="Skoda"
                type="checkbox"
              />
              <label
                for="Skoda"
              >
                Skoda
              </label>
            </div>
            <div>
              <input
                id="Volkswagen"
                name="Volkswagen"
                type="checkbox"
              />
              <label
                for="Volkswagen"
              >
                Volkswagen
              </label>
            </div>
          </div>
        </div>
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Power
            </span>
          </div>
          <div>
            <div>
              <input
                id="Min"
                name="Min"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Min"
                style="margin: 0.3rem;"
              >
                Min
              </label>
            </div>
            <div>
              <input
                id="Max"
                name="Max"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Max"
                style="margin: 0.3rem;"
              >
                Max
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-1"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-1 model-1
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-1 engine, ran for 62606 Km since firstRegistration-1, with a combined consumption of 4.5 (consumptionUnit-1) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-2"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-2 model-2
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-2 engine, ran for 62606 Km since firstRegistration-2, with a combined consumption of 4.5 (consumptionUnit-2) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          class="ucm-ui-car-card"
          style="background-color: whitesmoke; display: flex; flex-direction: column;"
        >
          <img
            src="/assets/image-3"
            style="object-fit: cover; width: 100%;"
          />
          <span
            style="font-size: large; margin: 0.3rem .6rem; display: flex;"
          >
            make-3 model-3
          </span>
          <span
            style="font-size: medium; margin: 0.3rem .6rem; display: flex;"
          >
            €7416.00
          </span>
          <span
            style="font-size: small; margin: 0.3rem .6rem .6rem; display: flex; flex: 1;"
          >
            44 HP fuel-3 engine, ran for 62606 Km since firstRegistration-3, with a combined consumption of 4.5 (consumptionUnit-3) and CO2 emission of 107 (g/Km)
          </span>
          <button
            class="ucm-ui-button"
            style="font-size: small; margin: initial;"
          >
            See more
          </button>
        </div>
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 7`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        >
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Make
              </span>
            </div>
            <div>
              <div>
                <input
                  checked=""
                  id="BMW"
                  name="BMW"
                  type="checkbox"
                />
                <label
                  for="BMW"
                >
                  BMW
                </label>
              </div>
              <div>
                <input
                  id="Skoda"
                  name="Skoda"
                  type="checkbox"
                />
                <label
                  for="Skoda"
                >
                  Skoda
                </label>
              </div>
              <div>
                <input
                  id="Volkswagen"
                  name="Volkswagen"
                  type="checkbox"
                />
                <label
                  for="Volkswagen"
                >
                  Volkswagen
                </label>
              </div>
            </div>
          </div>
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Power
              </span>
            </div>
            <div>
              <div>
                <input
                  id="Min"
                  name="Min"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Min"
                  style="margin: 0.3rem;"
                >
                  Min
                </label>
              </div>
              <div>
                <input
                  id="Max"
                  name="Max"
                  style="margin: 0.3rem;"
                  type="number"
                  value="60"
                />
                <label
                  for="Max"
                  style="margin: 0.3rem;"
                >
                  Max
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      >
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Make
            </span>
          </div>
          <div>
            <div>
              <input
                checked=""
                id="BMW"
                name="BMW"
                type="checkbox"
              />
              <label
                for="BMW"
              >
                BMW
              </label>
            </div>
            <div>
              <input
                id="Skoda"
                name="Skoda"
                type="checkbox"
              />
              <label
                for="Skoda"
              >
                Skoda
              </label>
            </div>
            <div>
              <input
                id="Volkswagen"
                name="Volkswagen"
                type="checkbox"
              />
              <label
                for="Volkswagen"
              >
                Volkswagen
              </label>
            </div>
          </div>
        </div>
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Power
            </span>
          </div>
          <div>
            <div>
              <input
                id="Min"
                name="Min"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Min"
                style="margin: 0.3rem;"
              >
                Min
              </label>
            </div>
            <div>
              <input
                id="Max"
                name="Max"
                style="margin: 0.3rem;"
                type="number"
                value="60"
              />
              <label
                for="Max"
                style="margin: 0.3rem;"
              >
                Max
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        Loading
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing component 'HomePage' : should render 'HomePage', then change both filters, then preform an infinite scroll 8`] = `
<div>
  <div
    style="max-width: 1200px; margin: auto;"
  >
    <div
      style="display: flex; flex-direction: row; flex: 1; margin: 1rem 0px; justify-content: start;"
    >
      <button
        class="ucm-ui-button"
        data-testid="filters-button"
        style="font-size: medium; margin: initial;"
      >
        Filters
      </button>
    </div>
    <div
      data-testid="popup-container"
      style="display: none; position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh; background-color: rgba(255, 255, 255, 0.933); overflow: auto; text-align: center;"
    >
      <div
        style="text-align: start; display: inline-block; background-color: lightgray; margin: 3rem;"
      >
        <div
          style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
        >
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Make
              </span>
            </div>
            <div>
              <div>
                <input
                  checked=""
                  id="BMW"
                  name="BMW"
                  type="checkbox"
                />
                <label
                  for="BMW"
                >
                  BMW
                </label>
              </div>
              <div>
                <input
                  id="Skoda"
                  name="Skoda"
                  type="checkbox"
                />
                <label
                  for="Skoda"
                >
                  Skoda
                </label>
              </div>
              <div>
                <input
                  id="Volkswagen"
                  name="Volkswagen"
                  type="checkbox"
                />
                <label
                  for="Volkswagen"
                >
                  Volkswagen
                </label>
              </div>
            </div>
          </div>
          <div
            style="padding-top: 1rem;"
          >
            <div
              style="text-align: center;"
            >
              <span
                style="font-size: large; margin: 0px 0px .5rem; display: flex;"
              >
                Power
              </span>
            </div>
            <div>
              <div>
                <input
                  id="Min"
                  name="Min"
                  style="margin: 0.3rem;"
                  type="number"
                  value="0"
                />
                <label
                  for="Min"
                  style="margin: 0.3rem;"
                >
                  Min
                </label>
              </div>
              <div>
                <input
                  id="Max"
                  name="Max"
                  style="margin: 0.3rem;"
                  type="number"
                  value="60"
                />
                <label
                  for="Max"
                  style="margin: 0.3rem;"
                >
                  Max
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: auto;"
    >
      <div
        style="padding: 0px 1rem 1rem; background-color: lightgray; margin: 1rem;"
      >
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Make
            </span>
          </div>
          <div>
            <div>
              <input
                checked=""
                id="BMW"
                name="BMW"
                type="checkbox"
              />
              <label
                for="BMW"
              >
                BMW
              </label>
            </div>
            <div>
              <input
                id="Skoda"
                name="Skoda"
                type="checkbox"
              />
              <label
                for="Skoda"
              >
                Skoda
              </label>
            </div>
            <div>
              <input
                id="Volkswagen"
                name="Volkswagen"
                type="checkbox"
              />
              <label
                for="Volkswagen"
              >
                Volkswagen
              </label>
            </div>
          </div>
        </div>
        <div
          style="padding-top: 1rem;"
        >
          <div
            style="text-align: center;"
          >
            <span
              style="font-size: large; margin: 0px 0px .5rem; display: flex;"
            >
              Power
            </span>
          </div>
          <div>
            <div>
              <input
                id="Min"
                name="Min"
                style="margin: 0.3rem;"
                type="number"
                value="0"
              />
              <label
                for="Min"
                style="margin: 0.3rem;"
              >
                Min
              </label>
            </div>
            <div>
              <input
                id="Max"
                name="Max"
                style="margin: 0.3rem;"
                type="number"
                value="60"
              />
              <label
                for="Max"
                style="margin: 0.3rem;"
              >
                Max
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: row; flex: 1; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 1rem;"
      >
        Loading
        <div
          style="width: 100%; text-align: center;"
        >
          <button
            class="ucm-ui-button"
            style="font-size: medium; margin: initial;"
          >
            Load more
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
